__server__/__client__/webgl/css/align.css
*{
    margin: 0 ;
    padding: 0;
    overflow: hidden ;
}
body {
   background-color: #e6f7ff ;
}
#start-game {
    width: 100px ;
    height: 50px ;
}
#control-container {
    position: absolute;
    z-index: 999;
    width: 100%;
    height: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    
}

#control-frame {
    width: 450px;
    height: 450px;
    background-color: aliceblue ;
    
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center ;
}

#display-container {
/*    position : relative ;*/
    display: none;
    width: 100% ;
    height: 100% ;
    z-index: -999 ;
    flex-wrap: wrap ;
    position: absolute ;
/*    justify-content: center ;*/
/*    align-items: center ;*/
}
#score-box {
    display: flex;
    flex-wrap: nowrap;
    height: 29px ;
    align-self: flex-end ;
    margin-left: 15px ;
/*    left: 5px ;*/
    
}

#main-setting {
    display: flex ;
    width: 100% ;
    height: 100% ;
    z-index: -998 ;
    flex-wrap: wrap;
/*    flex-wrap: nowrap ;*/
    position: absolute;
}

#show-setting {
    display: none;
    z-index: 998;
    flex-wrap: nowrap;
    height: 300px ;
    width: 500px ;
}  

#show-setting-button {
    height: 50px ;
    widows: 50px ;
    display: flex ;
    flex-wrap: nowrap ;
/*    align-self: flex-end ;*/
/*    justify-content:flex-start ;*/
}

#game-type {
    width: 160px ;
    height: 40px ;
}

